@@ -21,7 +21,6 @@ Before 1.0 big stuff
 Before 1.0 little stuff
 -----------------------
 
- o cleanup Makefile.am, use LIST = \\n file1.c \\n file2.c rather long diff un-readable line.
  o improve --smart-demangle
 	o allow user to add it's own pattern in user.pat, document it.
 	o hard code ${typename} regular definition to remove all current limitations (difficult, perhaps after 1.0 ?).
