@@ -1,4 +1,11 @@
-AM_CPPFLAGS=-I ${top_srcdir}/libutil -I ${top_srcdir}/libop -I ${top_srcdir}/libutil++
+AM_CPPFLAGS = \
+	-I ${top_srcdir}/libutil \
+	-I ${top_srcdir}/libop \
+	-I ${top_srcdir}/libutil++
 
 noinst_LIBRARIES = libop++.a
-libop___a_SOURCES = op_print_event.cpp op_mangling.cpp op_mangling.h op_print_event.h
+libop___a_SOURCES = \
+	op_print_event.cpp \
+	op_mangling.cpp \
+	op_mangling.h \
+	op_print_event.h
