@@ -1,7 +1,18 @@
 AM_CPPFLAGS=-I${top_srcdir}/libutil
 
 noinst_LIBRARIES = libop.a
-libop_a_SOURCES = op_events.c op_cpu_type.c op_mangle.c \
-	op_get_interface.c op_interface_25.h \
-	op_config.h op_cpu_type.h op_hw_config.h op_mangle.h op_config_24.h \
-	op_events.h op_interface.h op_sample_file.h op_config_25.h
+libop_a_SOURCES = \
+	op_events.c \
+	op_cpu_type.c \
+	op_mangle.c \
+	op_get_interface.c \
+	op_interface_25.h \
+	op_config.h \
+	op_cpu_type.h \
+	op_hw_config.h \
+	op_mangle.h \
+	op_config_24.h \
+	op_events.h \
+	op_interface.h \
+	op_sample_file.h \
+	op_config_25.h
