@@ -1,7 +1,19 @@
 AM_CPPFLAGS=-I ${top_srcdir}/libutil
 
 noinst_LIBRARIES = libutil++.a
-libutil___a_SOURCES = op_bfd.cpp child_reader.cpp file_manip.cpp string_manip.cpp \
-	filename_match.cpp cverb.cpp op_exception.cpp \
-	op_exception.h child_reader.h filename_match.h \
-	string_manip.h cverb.h file_manip.h op_bfd.h utility.h
+libutil___a_SOURCES = \
+	op_bfd.cpp \
+	child_reader.cpp \
+	file_manip.cpp \
+	string_manip.cpp \
+	filename_match.cpp \
+	cverb.cpp \
+	op_exception.cpp \
+	op_exception.h \
+	child_reader.h \
+	filename_match.h \
+	string_manip.h \
+	cverb.h \
+	file_manip.h \
+	op_bfd.h \
+	utility.h
