@@ -1,4 +1,20 @@
 noinst_LIBRARIES = libutil.a
-libutil_a_SOURCES = op_deviceio.c op_lockfile.c op_file.c op_fileio.c op_get_time.c \
-	op_libiberty.c op_popt.c op_string.c op_deviceio.h op_fileio.h op_libiberty.h op_lockfile.h \
-	op_types.h op_file.h op_get_time.h op_list.h op_popt.h op_string.h
+libutil_a_SOURCES = \
+	op_deviceio.c \
+	op_lockfile.c \
+	op_file.c \
+	op_fileio.c \
+	op_get_time.c \
+	op_libiberty.c \
+	op_popt.c \
+	op_string.c \
+	op_deviceio.h \
+	op_fileio.h \
+	op_libiberty.h \
+	op_lockfile.h \
+	op_types.h \
+	op_file.h \
+	op_get_time.h \
+	op_list.h \
+	op_popt.h \
+	op_string.h
